--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,22 @@ services:
     build:
       context: ./VitiligoTracker
       dockerfile: Dockerfile
-    ports:
-      - "80:8080"
+    # ports:
+    #   - "80:8080"
     environment:
       - ConnectionStrings__DefaultConnection=Data Source=/app/data/vitiligo.db
     volumes:
       - ./docker_data:/app/data
+    restart: always
+
+  nginx:
+    image: nginx:latest
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx/conf:/etc/nginx/conf.d
+      - ./nginx/certs:/etc/nginx/certs
+    depends_on:
+      - vitiligotracker
     restart: always
