--- a/VitiligoTracker/appsettings.json
+++ b/VitiligoTracker/appsettings.json
@@ -11,7 +11,7 @@
   },
   "SeedData": {
     "AdminUser": {
-      "UserName": "admin",
+      "UserName": "李云亮",
       "Password": "liyunliang123",
       "PhoneNumber": "15032150705",
       "Email": "liyunliang@vitiligo.com"
